# hyprxkb

./: .gitignore  Cargo.toml  README.md  hyprkbtool.service  hyprxkb.service
docs/: docs.md
src/: capslock.rs  compositor.rs  config.rs  evdev.rs  hypr.rs  input.rs  instance.rs  layout.rs  main.rs  notify.rs
src/compositor/: hyprland.rs
src/config/: schema.rs
src/input/: evdev.rs
src/layout/: rules.rs
src/notify/: none.rs  notify_send.rs  quickshell.rs  swayosd.rs
