[package]
name        = "hyprxkb"
version     = "0.4.0"
edition     = "2021"
description = "Keyboard layout-switching utility for Hyprland"
license     = "MIT"

[[bin]]
name = "hyprxkb"
path = "src/main.rs"

[dependencies]
toml        = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
evdev       = "0.13"
signal-hook = "0.3"
libc        = "0.2"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
